--- a/C#/UmbracoPracticeProject/MarketPlaceApp/MarketPlaceApp.csproj
+++ b/C#/UmbracoPracticeProject/MarketPlaceApp/MarketPlaceApp.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Our.Umbraco.TagHelpers" Version="1.2.0" />
     <PackageReference Include="Umbraco.Cms" Version="13.8.1" />
   </ItemGroup>
 
