--- a/C#/UmbracoPracticeProject/MarketPlaceApp/appsettings.json
+++ b/C#/UmbracoPracticeProject/MarketPlaceApp/appsettings.json
@@ -10,6 +10,15 @@
       }
     }
   },
+  "BlockPreview": {
+    "BlockGrid": {
+      "Enabled": true,
+      "ContentTypes": [ "richTextBlock" ]
+    },
+    "BlockList": {
+      "Enabled": false
+    }
+  },
   "Umbraco": {
     "CMS": {
       "Global": {
